--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,9 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "6.2.1",
     "react-scripts": "5.0.0",
+    "react-toastify": "^9.0.8",
     "styled-components": "^5.3.3",
+    "toastr": "^2.1.4",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
@@ -47,6 +49,7 @@
     ]
   },
   "devDependencies": {
-    "@types/styled-components": "^5.1.20"
+    "@types/styled-components": "^5.1.20",
+    "@types/toastr": "^2.1.40"
   }
 }
